--- a/chat.html
+++ b/chat.html
@@ -56,6 +56,7 @@
             word-wrap: break-word;
             padding: 10px;
             border-radius: 8px;
+            position: relative;
         }
 
         .message.user {
@@ -66,6 +67,14 @@
         .message.bot {
             align-self: flex-start;
             background-color: #ebebeb;
+        }
+
+        .message .timestamp {
+            font-size: 10px;
+            color: #999;
+            position: absolute;
+            bottom: -15px;
+            right: 0;
         }
 
         .input-box {
@@ -87,8 +96,8 @@
         .input-box button {
             background-color: #075E54;
             color: white;
-            padding: 10px 15px;
-            border-radius: 50%;
+            padding: 10px 20px; /* Menyesuaikan lebar tombol */
+            border-radius: 10px; /* Menjaga agar tidak terlalu oval */
             border: none;
             cursor: pointer;
         }
@@ -138,6 +147,12 @@
             const messageDiv = document.createElement('div');
             messageDiv.className = 'message ' + sender;
             messageDiv.textContent = text;
+
+            const timestamp = document.createElement('div');
+            timestamp.className = 'timestamp';
+            timestamp.textContent = getCurrentTime(); // Menambahkan keterangan waktu
+
+            messageDiv.appendChild(timestamp);
             chatBox.appendChild(messageDiv);
             chatBox.scrollTop = chatBox.scrollHeight; // Scroll ke bawah setiap kali ada pesan baru
         }
@@ -161,6 +176,13 @@
             } catch (error) {
                 addMessage('Maaf, saya mengalami kesulitan untuk merespons.', 'bot');
             }
+        }
+
+        // Fungsi untuk mendapatkan waktu saat ini dalam format GMT+8
+        function getCurrentTime() {
+            const now = new Date();
+            const gmtPlus8Time = new Date(now.getTime() + (8 * 60 * 60 * 1000)); // Tambahkan 8 jam
+            return gmtPlus8Time.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
         }
     </script>
 
