--- a/chat.html
+++ b/chat.html
@@ -125,6 +125,10 @@
     </div>
 
     <script>
+        // Cek domain, jika tidak berasal dari amindeveloper99.github.io, redirect ke domain tersebut
+    if (window.location.hostname !== 'amindeveloper99.github.io') {
+        window.location.href = 'https://amindeveloper99.github.io';
+    }
         const apiUrl = 'https://api.nyxs.pw/ai/gpt4?text=';
         const chatBox = document.getElementById('chat-box');
         let chatHistory = ""; // Menyimpan riwayat chat
