--- a/gpt4.html
+++ b/gpt4.html
@@ -126,7 +126,7 @@
 <body>
 
 <div class="container">
-    <h2>Form Pertanyaan GPT-4</h2>
+    <h2>Form Pertanyaan</h2>
     <form id="questionForm">
         <label for="question">Masukkan Pertanyaan:</label>
         <!-- Placeholder, tidak ada nilai default -->
