--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <body>
 
     <div class="container">
-        <h1>Tool Links</h1>
+        <h1>Amin Developer</h1>
 
         <!-- Downloader Section -->
         <div class="section">
