--- a/chat.html
+++ b/chat.html
@@ -195,7 +195,9 @@
             return new Date().toLocaleTimeString('id-ID', options);
         }
     </script>
-<script async="async" data-cfasync="false" src="//pl24503466.cpmrevenuegate.com/e92c237c04558d624f7a60c70e95f3e9/invoke.js"></script>
-<div id="container-e92c237c04558d624f7a60c70e95f3e9"></div>
+//iklan adsterra
+<script type='text/javascript' src='//pl24503491.cpmrevenuegate.com/28/23/81/282381b2d984b79423e3f1e98d4146c1.js'></script>
+    
+    <div id="container-e92c237c04558d624f7a60c70e95f3e9"></div>
 </body>
 </html>
