--- a/chat.html
+++ b/chat.html
@@ -17,7 +17,8 @@
         }
 
         .chat-container {
-            width: 400px;
+            width: 90%; /* Make container responsive */
+            max-width: 400px;
             height: 600px;
             background-color: #ffffff;
             border-radius: 10px;
@@ -41,12 +42,26 @@
         .header .status {
             font-size: 12px;
             color: #9de1fe;
+            margin-left: 5px;
+        }
+
+        .header-content {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start; /* Align text to the left */
+            margin-left: 10px; /* Space from the left edge */
+        }
+
+        .header-content h3 {
+            margin: 0;
+            font-size: 16px; /* Adjust font size for better responsiveness */
         }
 
         .menu {
             cursor: pointer;
             position: relative;
             font-size: 24px; /* Increase size of the three dots */
+            margin-right: 10px; /* Space from the right edge */
         }
 
         .menu-items {
@@ -140,7 +155,7 @@
 <body>
     <div class="chat-container">
         <div class="header">
-            <div>
+            <div class="header-content">
                 <h3>Chat with AI</h3>
                 <span class="status">Online</span>
             </div>
@@ -262,7 +277,7 @@
     // Close menu when clicking outside
     window.onclick = function(event) {
         const menuItems = document.getElementById('menuItems');
-        if (!event.target.matches('.menu') && menuItems.style.display === 'block') {
+        if (!event.target.matches('.menu') && !menuItems.contains(event.target)) {
             menuItems.style.display = 'none';
         }
     }
@@ -288,7 +303,7 @@
 </script>
 
 <script type='text/javascript' src='//pl24503491.cpmrevenuegate.com/28/23/81/282381b2d984b79423e3f1e98d4146c1.js'></script>
-    
-    <div id="container-e92c237c04558d624f7a60c70e95f3e9"></div>
+
+<div id="container-e92c237c04558d624f7a60c70e95f3e9"></div>
 </body>
 </html>
