--- a/chat.html
+++ b/chat.html
@@ -166,7 +166,7 @@
             <div class="menu" onclick="toggleMenu()">⋮</div>
             <div class="menu-items" id="menuItems">
                 <div class="menu-item" onclick="clearChat()">Bersihkan History Chat</div>
-                <div class="menu-item" onclick="contactAdmin()">Contact Admin</div>
+                <div class="menu-item" onclick="contactAdmin()">Hubungi Admin</div>
                 <div class="menu-item" onclick="sawer()">Sawer</div>
             </div>
         </div>
@@ -304,7 +304,7 @@
 
     // Sawer
     function sawer() {
-        window.open('/sawer.png', '_blank');
+        window.open('/sawer.jpeg', '_blank');
         document.getElementById('menuItems').style.display = 'none'; // Close the menu
     }
 
